name:                agnus
version:             0.1.0.0
synopsis:            A Lambda Machine
homepage:            https://github.com/johnchandlerburnham/agnus#readme
license:             BSD3
license-file:        LICENSE
author:              John C. Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John C. Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/johnchandlerburnham/agnus#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib, DeBruijnDisembodied
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johnchandlerburnham/agnus
